--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-favicon": "^2.0.4",
+    "koa-favicon": "^2.1.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "parser": "^0.1.4",
